--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -23,3 +23,20 @@
 tr {
     border-top: 1em solid transparent;
 }
+
+.saved-listing-image {
+    height: 200px;
+    border-radius: 20px;
+    border: 1px solid white;
+}
+
+.card {
+    border-radius: 20px;
+    border: 2px solid rgba(194,208,194);
+}
+
+@media(max-width: 990px) {
+    .saved-listing-image {
+    height: 400px;
+    }
+}
