--- a/profiles/templates/profiles/my_listings.html
+++ b/profiles/templates/profiles/my_listings.html
@@ -48,7 +48,7 @@
                         <a href="{% url 'conversion_detail' listing.id %}">
                             <button class="btn btn-white btn-outline-black text-white">Go To Listing</button>
                         </a>
-                        <a href="{% url 'conversions' %}">
+                        <a href="{% url 'edit_conversion' listing.id %}">
                             <button class="btn btn-white btn-outline-black text-white">Edit Listing</button>
                         </a>
                         {% if listing.is_active %}
