--- a/conversions/templates/conversions/add_conversion.html
+++ b/conversions/templates/conversions/add_conversion.html
@@ -89,6 +89,7 @@
                     {{ form.electrics | as_crispy_field }}
                     {{ form.registered_vehicle_type | as_crispy_field }}
                     {{ form.conversion_description | as_crispy_field }}
+                    {{ form.unique_ref | as_crispy_field }}
                     <hr class="text-black">
                     <h5>Image Upload</h5>
                     <br>
