--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -59,6 +59,7 @@
                                     </select>
                                 </div>
                             {% endif %}
+                            {% if product.sku != "12345678" %}
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
@@ -86,6 +87,33 @@
                                     </div>
                                 </div>
                             </div>
+                            {% else %}
+                            <div class="col-12">
+                                <p class="mt-3 text-white"><strong>Select Listing:</strong></p>
+                                <select class="form-control rounded-0 w-50" name="listing_uuid" id="id_listing_uuid">
+                                    {% for listing in my_listings %}
+                                    <option value="{{ listing.unique_ref }}">{{ listing.listing_title }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="col-12">
+                                <p class="mt-3 text-white"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="1"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
 
                             <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
