Added checkout-free template view and url to handle orders with no value

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -124,8 +124,11 @@
                                             </span>
                                             <span class="text-uppercase">Keep Shopping</span>
                                         </a>
-                                        
+                                        {% if product.sku == 12345678 %}
                                         <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
+                                        {% else %}
+                                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                        {% endif %}
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
