Added listing level template content, linked up to relevant product detail

--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -21,15 +21,45 @@
                 </a>
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-5">
             <div class="col-12 col-lg-4">
-                <h1>LEVEL 1 PRICING</h1>
+                <a href="{% url 'view_plan' 7 %}">
+                    <div class="card">
+                        <div class="card-body bg-light text-center">
+                            <h1>STANDARD</h1>
+                            <img class="img-fluid border-black" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
+                        </div>
+                        <div class="card-footer text-center text-white">
+                            <p class="larger-font"><strike>£7.99 for 30 days.</strike></p>
+                            <p class="larger-font">£0.00 UNTIL THE END OF JUNE</p>
+                        </div>   
+                    </div>
+                </a>
+               
             </div>
             <div class="col-12 col-lg-4">
-                <h1>LEVEL 2 PRICING</h1>
+                <div class="card">
+                    <div class="card-body bg-light text-center">
+                        <h1>EXTENDED</h1>
+                        <img class="img-fluid border-black" src="{{ MEDIA_URL }}service-level-image.jpeg" alt="">
+                    </div>
+                    <div class="card-footer text-center text-white">
+                        <p class="larger-font">£14.99 for 60 days.</p> 
+                    </div>
+                     
+                </div>
             </div>
             <div class="col-12 col-lg-4">
-                <h1>LEVEL 3 PRICING</h1>
+                <div class="card">
+                    <div class="card-body bg-light text-center">
+                        <h1>QUARTER</h1>
+                        <img class="img-fluid border-black" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
+                    </div>
+                    <div class="card-footer text-center text-white">
+                        <p class="larger-font">£19.99 for 90 days.</p> 
+                    </div>
+                     
+                </div>
             </div>
         </div>
         </div>
