--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -54,12 +54,18 @@
                                 <a href="{% url 'conversion_detail' conversion.id %}" class="btn border-white rounded-2 text-white mb-2">View Details</a>
                                 <a href="{% url 'edit_conversion' conversion.id %}" class="btn border-white rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
                                 <a href="{% url 'delete_conversion' conversion.id %}" class="btn border-white rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
-                                <a class="ml-2 btn border-white rounded-2 text-white mb-2">Contact Seller</a>
+                                <a class="ml-2 btn border-white rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
                                 <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn border-white rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                                <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                             </div>
                         </div>
                 {% endfor %}
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'conversions/includes/contact_seller_button_script.html' %}
 {% endblock %}
