--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -43,7 +43,6 @@
                                         <h3>{{ conversion.listing_title }}</h3>
                                         <p>{{ conversion.category }}</p>
                                         <p>Username: {{ conversion.user.user }} </p>
-                                        <p>User: {{ conversion.name }} </p>
                                     </div>
                                     <div class="col-12 col-lg-6">
                                        
@@ -57,6 +56,7 @@
                                 <a class="ml-2 btn border-white rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
                                 <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn border-white rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
                                 <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
+                                <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                             </div>
                         </div>
                 {% endfor %}
