--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="product-container col-10 offset-1">
 
-                <div class="row mt-1 mb-2">
+                <div class="row mt-3">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
                             <select id="sort-selector"
@@ -60,58 +60,52 @@
 
                 {% for conversion in conversions %}
                     {% if conversion.is_active %}
-                    <div class="row mt-1 mb-2"></div>
+                    <div class="row mt-1 mb-4 {% if forloop.counter == 1 %}mt-2{% else %}mt-4{% endif %}"></div>
                         <div class="row conversion-listing">
-                            <div class="col-12 col-md-5 {% if forloop.counter|divisibleby:2 %}order-md-last{% endif %}">
-                                <div class="card h-100 border-0">
+                            <div class="col-12 col-xl-4 {% if forloop.counter|divisibleby:2 %}order-lg-last{% endif %} d-flex align-items-center">
+                                <div class="">
                                     {% if conversion.main_image %}
                                     <a href="{% url 'conversion_detail' conversion.id %}">
                                         <img class="img-fluid img-conversions-page" src="{{ conversion.main_image.url }}" alt="{{ conversion.listing_title }}">
                                     </a>
                                     {% else %}
                                     <a href="{% url 'conversion_detail' conversion.id %}">
-                                        <img class="img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.listing_title">
+                                        <img class="img-fluid img-conversions-page" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.listing_title }}">
                                     </a>
                                     {% endif %}
                                 </div>
                             </div>
-                            <div class="col-12 col-md-7 d-flex justify-content-center">
-                                <div class="card">
-                                    <div class="card-body bg-white pb-0">
+                            <div class="col-12 col-xl-8 d-flex justify-content-center">
+                                <div class="card no-border w-100 h-100">
+                                    <div class="card-header text-white">
                                         <a href="{% url 'conversion_detail' conversion.id %}">
                                             <h3 class="mb-0 p-2">{{ conversion.listing_title }}</h3>
                                             <h4 class="mb-2 p-2 text-left font-weight-bold">£{{ conversion.price }}</h4>
                                         </a>
-                                        <p class="mt-2 p-2 mb-0 text-left font-weight-bold">£{{ conversion.vehicle_description }}</p>
                                     </div>
-                                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="card-body h-100 text-white conversion-detail-border">
                                         <div class="row">
-                                            <div class="col">
-                                                <p class="p-2 mb-0 text-left font-weight-bold"><strong>Berths</strong></p>
-                                                <p class="mb-0 p-2">{{ conversion.berths }}</p>
+                                            <div class="col-6">
+                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><span class="large-font">Vehicle</span> - {{ conversion.vehicle_make_and_model }} - {{ conversion.year }}</p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Vehicle Make & Model</strong></p>
-                                                <p class="mb-0 p-2">tbc</p>
-                                            </div>
-                                            <div class="col">
-                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Vehicle Year</strong></p>
-                                                <p class="mb-0 p-2"><strong>tbc</strong></p>
+                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><span class="large-font">Location</span> - {{ conversion.location }}</strong></p>
+                                                <p class="mb-0 p-2">{{ conversion.vehicle_description|truncatechars:250 }}</p>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col">
-                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Location</strong></p>
-                                                <p class="mb-0 p-2">tbc</p>
-                                            </div>
-                                        </div>
+                                    </div>
+                                    <div class="card-footer text-center text-lg-left">
+                                        <a href="{% url 'conversion_detail' conversion.id %}" class="btn border-black bg-white rounded-2 text-black mb-2">View Details</a>
+                                        <a class="ml-2 btn border-black bg-white rounded-2 text-black mb-2 contact-info-button">Contact Seller</a>   
+                                        <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
+                                        <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <hr class="text-white mb-1">
+                        <hr class="text-white mt-5">
                     {% endif %}
                 {% endfor %}
             </div>
@@ -126,6 +120,8 @@
 
 {% block postloadjs %}
     {{ block.super }}
+
+{% include 'conversions/includes/contact_seller_button_script.html' %}
 
     <script type="text/javascript">
 		$('.btt-link').click(function(e) {
@@ -156,3 +152,5 @@
         })
     </script>
 {% endblock %}
+
+
