--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -139,8 +139,10 @@
                             <h2 class="mb-0 text-black">{{ conversion.name }}</h2>
                             <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
                             <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
-                            <a class="btn border-black rounded-2 text-black">Contact Seller</a>
+                            <a class="btn border-black rounded-2 text-black contact-info-button">Contact Seller</a>
                             <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                            <p class="mt-5 text-black large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
+                            <p class="mt-3 text-black large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                         </div>
                     </div>
                 </div>
@@ -206,4 +208,9 @@
             </div>
         {% endif %}
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'conversions/includes/contact_seller_button_script.html' %}
 {% endblock %}
