--- a/static/css/base.css
+++ b/static/css/base.css
@@ -206,11 +206,14 @@ a.category-badge > span.badge:hover {
 .img-conversions-page {
     border: 1px solid white;
     padding: 7px;
+    border-radius: 20px;
 }
 
 @media (max-width:1199px){
     .img-conversions-page {
     border-bottom: unset;
+    border-bottom-left-radius: unset;
+    border-bottom-right-radius: unset;
     }
 }
 
@@ -336,6 +339,7 @@ a.category-badge > span.badge:hover {
 
 .card-header.text-white {
     border: 1px solid white;
+    background-color: #555;
 }
 
 
