Change carousel control icons with fontawesome icons, stlye as desired

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -255,6 +255,12 @@ a.category-badge > span.badge:hover {
     background-color: unset;
 }
 
+.fa-arrow-alt-circle-left,
+.fa-arrow-alt-circle-right {
+    color: white;   
+}
+
+
 /* ----- Admin Pages ------ */
 
 .card-img-sm {
