--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -90,11 +90,11 @@
                                             {% endfor %}
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel{{ forloop.counter }}Indicators" role="button" data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <i style="font-size: 40px" class="fas fa-arrow-alt-circle-left ml-2"></i>
                                             <span class="sr-only">Previous</span>
                                         </a>
                                         <a class="carousel-control-next" href="#carousel{{ forloop.counter }}Indicators" role="button" data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <i style="font-size: 40px" class="fas fa-arrow-alt-circle-right mr-2"></i>
                                             <span class="sr-only">Next</span>
                                         </a>
                                         </div>
